replaced fixed positioning with absolute positioning

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -653,7 +653,7 @@ dt {
 header {
   padding: 25px 20px 40px 20px;
   margin: 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -692,7 +692,7 @@ header p {
   right: 50%;
   height: 50px;
   margin-right: -382px;
-  position: fixed;
+  position: absolute;
   top: 115px;
   background: #ffcc00;
   border: 1px solid #f0b500;
@@ -747,9 +747,9 @@ header p {
   background-color: #ffeca0;
 }
 #banner .fork {
-  position: fixed;
+  position: absolute;
   left: 50%;
-  margin-left: -325px;
+  margin-left: -97px;
   padding: 10px 12px;
   margin-top: 6px;
   line-height: 14px;
@@ -817,8 +817,8 @@ small {
 
 nav {
   width: 230px;
-  position: fixed;
-  top: 220px;
+  position: absolute;
+  top: 0;
   left: 50%;
   margin-left: -580px;
   text-align: right;
@@ -852,7 +852,7 @@ nav ul a:hover {
 
 footer {
   width: 180px;
-  position: fixed;
+  position: absolute;
   left: 50%;
   margin-left: -530px;
   bottom: 20px;
